Fix bootstrap 4 css break in add user page

--- a/src/app/pages/home/messages/messages.component.css
+++ b/src/app/pages/home/messages/messages.component.css
@@ -766,15 +766,15 @@ span.label {
 }
 
 .select {
-  width: 100px;
-  display: block;
-  position: relative;
-  margin: 0 10px;
-  padding: 15px;
-	height: 25px;
-	cursor: pointer;
+  margin-right: 5px;
 }
 
 .font_size09 {
   font-size: 0.9rem;
+}
+
+label.select__label {
+  display: flex;
+  margin-right: 3px;
+  align-items: center;
 }
